--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 # This file lists all individuals having contributed content to the repository.
 
-yonas Baysasaw <yonas988252656@gmail.com
+yonas Baysasaw <yonas988252656@gmail.com>
